external-crates/move/crates/move-transactional-test-runner/tests/vm_test_harness/publish_and_call_linkage_spec.exp
processed 5 tasks

task 1, lines 3-6:
//# publish-and-call --call 0x42::n::make
return values: 0


task 2, lines 8-11:
//# publish-and-call --location 0x2 --linkage 0x42=>0x2 -- --call 0x42::n::make
Error: Function execution failed with VMError: {
    major_status: ABORTED,
    sub_status: Some(0),
    location: 0x42::n,
    indices: [],
    offsets: [(FunctionDefinitionIndex(0), 1)],
}

task 3, line 13:
//# run 0x42::n::make
return values: 0

task 4, line 15:
//# run 0x42::n::make --linkage 0x42=>0x2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
